--- a/250907/“EM-Vortex”模式-250907-01.md
+++ b/250907/“EM-Vortex”模式-250907-01.md
@@ -1,1 +1,3 @@
 ![image.png](https://cdn.jsdelivr.net/gh/zzkdm888/note-gen-image-sync@main/2025-09/d8f6b282-9ab0-4f98-bf91-8c5ba43397c6.png)
+
+![image.png](https://cdn.jsdelivr.net/gh/zzkdm888/note-gen-image-sync@main/2025-09/6625ab4e-c93b-48af-9051-d750bd1078bf.png)
