--- a/250907/“EM-Vortex”模式-250907-02.md
+++ b/250907/“EM-Vortex”模式-250907-02.md
@@ -1,1 +1,3 @@
 ![image.png](https://cdn.jsdelivr.net/gh/zzkdm888/note-gen-image-sync@main/2025-09/7b8e060c-35dd-460a-a664-999d53bb4949.png)
+
+![image.png](https://cdn.jsdelivr.net/gh/zzkdm888/note-gen-image-sync@main/2025-09/2459e5df-c9a8-4f2b-b52c-ad3cc4915a68.png)
