--- a/250907/“EM-Vortex”模式-250907-03.md
+++ b/250907/“EM-Vortex”模式-250907-03.md
@@ -1,1 +1,3 @@
 ![image.png](https://cdn.jsdelivr.net/gh/zzkdm888/note-gen-image-sync@main/2025-09/f0198f94-d54e-4a24-861d-371d1d46ebc9.png)
+
+![image.png](https://cdn.jsdelivr.net/gh/zzkdm888/note-gen-image-sync@main/2025-09/a4ce44b0-fcff-4181-9d47-6f72ea19c0f9.png)
